CDR-1506 Adjust EHR_STATUS validation